@@ -24,4 +24,12 @@
 ## 选用组件
 - Nacos 2.2 https://nacos.io/zh-cn/index.html
 
+## 问题记录
+启动提示如下：
+```
+Can't create adaptive extension interface org.apache.dubbo.rpc.Protocol, cause: Failed to compile class, cause: null, class: org.apache.dubbo.rpc.Protocol$Adaptive, code:  package org.apache.dubbo.rpc
+```
 
+JDK17运行程序的时候添加jvm参数--add-opens java.base/java.lang=ALL-UNNAMED
+
+https://blog.csdn.net/friendlytkyj/article/details/124054034
